# csv-gp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: commits.yml  publish.yml  python-ci.yml  rust-ci.yml
csv_gp/: Cargo.toml
csv_gp/fixtures/: quote_with_whitespace.csv
csv_gp/src/: cell.rs  checker.rs  csv_details.rs  error.rs  file.rs  lib.rs  main.rs  parser.rs  valid_file.rs
csv_gp_python/: Cargo.toml  csv_gp.pyi  pyproject.toml
csv_gp_python/src/: error.rs  lib.rs
csv_gp_python/tests/: test_integration.py  test_intergration.py
csv_gp_python/tests/fixtures/: header_messed_up.csv  incorrect_quote.csv  kitchen_sink.csv  kitchen_sink_valid.csv  mac_roman.csv  quote_and_newline.csv  quote_last_cell.csv
src/: lib.rs  parser.rs
