[package]
name = "csv-gp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"] }
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
char_reader = "0.1.1"
csv = "1.1.6"
itertools = "0.10.5"

[dev-dependencies]
tempfile = "3.3.0"
