[package]
name = "csv-gp-python"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "csv_gp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37"] }
csv-gp = {path = "../csv_gp"}
